test/integration/bad/new/fatal_error-bad1.stan
 transformed data { fatal_error ( "hello world" while
